[project]
name = "htmlcomponents"
version = "0.1.0"
description = ""
dependencies = []
optional-dependencies.dev = [
    "mypy",
    "ruff",
]

[project.scripts]
httpserver = "htmlcomponents:httpserver.main"

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["htmlcomponents"]
