[project]
name = "htmlcomponents"
version = "0.1.0"
description = ""
dependencies = []
requires-python=">=3.10"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
]

[project.scripts]
httpserver = "htmlcomponents:httpserver.main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["htmlcomponents"]
